# newsboxone

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md
.agent/: README.md  backend-reference.md  frontend-reference.md  policy-shared.md  shared-reference.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: code-review-instructions.md  commit-message-instructions.md  copilot-instructions.md  dependabot.yml
backend/: .gitignore  AGENTS.md  Cargo.toml  README.md
backend/.github/: copilot-instructions.md  dependabot.yml
backend/docker/: entrypoint
backend/docs/: techstack.md  test-scenarios.md
backend/migrations/: 202603060001_baseline.sql  202603100001_article_unread_default_1.sql  202603210001_feed_manual_quality_overrides.sql  202603280001_auth_tokens.sql  202603280002_feed_last_article_date.sql  202605050001_feed_soft_delete.sql
backend/src/: api.rs  article_store.rs  auth_tokens.rs  config.rs  content.rs  db.rs  email.rs  email_credentials.rs  feed_ingestion.rs  http_client.rs  llm.rs  main.rs  repo.rs  ssrf.rs  updater.rs
backend/src/api/: auth.rs  errors.rs  feeds.rs  folders.rs  items.rs  tests.rs
backend/src/api/tests/: auth.rs  feeds.rs  folders.rs  items.rs  service.rs  support.rs
backend/tests/: integration_cases.rs  journey_tests.rs
backend/tests/unit/: test_email.py
docker/: entrypoint.sh  nginx.conf
docs/: api-contract.yaml  backend-requirements.md  backend-test-cases.md  e2e-test-cases.md  frontend-requirements.md  frontend-test-cases.md  improvement-ideas.md  requirements.md  tech-stack.md
(+173 files in other folders)
