[package]
name = "headless-rss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
feed-rs = "2.3"
imap = "2.4"
mailparse = "0.16"
md5 = "0.8"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rand = "0.10"
regex = "1.11"
readability-js = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "net", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.2"
tempfile = "3.27"
tower = { version = "0.5", features = ["util"] }

